force-app/main/default/objects/ConnectionSetting__mdt/ConnectionSetting__mdt.object-meta.xml
<CustomObject>
    <description>Base URLs and other settings for API Connections</description>
    <label>Connection Setting</label>
    <pluralLabel>Connection Settings</pluralLabel>
</CustomObject>