force-app/main/default/objects/ConnectionSetting__mdt/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <description>The API Key to connect to this endpoint</description>
    <inlineHelpText>The API Key to connect to this endpoint</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>