force-app/main/default/objects/ConnectionSetting__mdt/fields/APISecret__c.field-meta.xml
<CustomField>
    <fullName>APISecret__c</fullName>
    <inlineHelpText>The API Secret to connect to this endpoint</inlineHelpText>
    <label>API Secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>