force-app/main/default/objects/ConnectionSetting__mdt/fields/APIVersion__c.field-meta.xml
<CustomField>
    <fullName>APIVersion__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <description>The API Version for this endpoint.  Leave as NA if no version is required in callout</description>
    <inlineHelpText>The API Version for this endpoint.  Leave as NA if no version is required in callout</inlineHelpText>
    <label>API Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>v1</fullName>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
            <value>
                <fullName>v3</fullName>
            </value>
            <value>
                <fullName>v4</fullName>
            </value>
            <value>
                <fullName>v5</fullName>
            </value>
            <value>
                <fullName>v6</fullName>
            </value>
            <value>
                <fullName>v7</fullName>
            </value>
            <value>
                <fullName>v8</fullName>
            </value>
            <value>
                <fullName>v9</fullName>
            </value>
            <value>
                <fullName>v10</fullName>
            </value>
            <value>
                <fullName>v11</fullName>
            </value>
            <value>
                <fullName>v12</fullName>
            </value>
            <value>
                <fullName>v13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>