force-app/main/default/objects/ConnectionSetting__mdt/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <inlineHelpText>The base URL entry point for the API</inlineHelpText>
    <label>Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>