force-app/main/default/objects/ConnectionSetting__mdt/fields/FirmDomain__c.field-meta.xml
<CustomField>
    <fullName>FirmDomain__c</fullName>
    <inlineHelpText>The firm domain portion of your Addepar API Url.
ie:  Https://mydomain.addepar.com/api</inlineHelpText>
    <label>Firm Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>