force-app/main/default/objects/ConnectionSetting__mdt/fields/FirmId__c.field-meta.xml
<CustomField>
    <fullName>FirmId__c</fullName>
    <label>Firm Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>