force-app/main/default/objects/ConnectionSetting__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>The password to access this endpoint</description>
    <inlineHelpText>The password to access this endpoint</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>