force-app/main/default/objects/ConnectionSetting__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>The username to access this endpoint</description>
    <inlineHelpText>The username to access this endpoint</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>